Bug 174701 - Okular fails to open incorrectly named CBR file
Summary: Okular fails to open incorrectly named CBR file
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: Comicbook backend (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-09 12:29 UTC by Chris
Modified: 2008-11-09 15:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris 2008-11-09 12:29:02 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

I have some files with extension CBR, which should be (according to the conventions of the extension) a RAR archive.  In actuality, the files in question are ZIP archives that should (again, according to convention) have the extension CBZ.

If I try to open the CBR files in Okular, nothing is shown.  It is as if the file is corrupted.  If I change the extension to the proper one of CBZ, Okular will open and display that same file perfectly.

Perhaps Okular could, as dedicated comic book reading programs do, determine the structure of the file and open it appropriately, rather than relying on the extension to know the proper archive type.  I tried to open these CBR files in Okular, and by Okular's failure to open them, thought the files had been corrupted.
Comment 1 Pino Toscano 2008-11-09 15:56:04 UTC
SVN commit 882007 by pino:

Hack around the fact that CBR or CBZ documents can ahve the wrong extension.
(And I wonder, if the only way to recognize them is via extension, wtf?)

BUG: 174701


 M  +8 -2      document.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=882007
Comment 2 Pino Toscano 2008-11-09 15:59:32 UTC
SVN commit 882010 by pino:

Backport: hack around the fact that CBR or CBZ documents can ahve the wrong extension.

CCBUG: 174701


 M  +5 -2      document.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=882010