Hack around the fact that CBR or CBZ documents can ahve the wrong extension. (And I wonder, if the only way to recognize them is via extension, wtf?)

BUG: 174701

svn path=/trunk/KDE/kdegraphics/okular/; revision=882007